--- a/src/sample/utils/build.gradle
+++ b/src/sample/utils/build.gradle
@@ -25,5 +25,5 @@ android {
 
 dependencies {
     api project(':src:sdk:base')
-    api files('../../../dependencies/libwebrtc/libwebrtc.jar')
+   // api files('../../../dependencies/libwebrtc/libwebrtc.jar')
 }
