--- a/src/sdk/base/build.gradle
+++ b/src/sdk/base/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.targetSdkVersion
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,9 +24,10 @@ android {
 }
 
 dependencies {
-    compileOnly files('libs/libwebrtc.jar')
+// https://mvnrepository.com/artifact/org.webrtc/google-webrtc
+    compile group: 'org.webrtc', name: 'google-webrtc', version: '1.0.32006'
+
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation files('libs/libwebrtc.jar')
 }
