--- a/src/sdk/conference/build.gradle
+++ b/src/sdk/conference/build.gradle
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    compileOnly files('../../../dependencies/libwebrtc/libwebrtc.jar')
+  //  compileOnly files('../../../dependencies/libwebrtc/libwebrtc.jar')
     compileOnly('io.socket:socket.io-client:1.0.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
@@ -39,5 +39,5 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
     androidTestImplementation project(':src:sdk:base')
-    androidTestImplementation files('../../../dependencies/libwebrtc/libwebrtc.jar')
+ //   androidTestImplementation files('../../../dependencies/libwebrtc/libwebrtc.jar')
 }
