--- a/src/sdk/p2p/build.gradle
+++ b/src/sdk/p2p/build.gradle
@@ -24,12 +24,12 @@ android {
 }
 
 dependencies {
-    compileOnly files('../../../dependencies/libwebrtc/libwebrtc.jar')
+  //  compileOnly files('../../../dependencies/libwebrtc/libwebrtc.jar')
     compileOnly project(':src:sdk:base')
 
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation project(':src:sdk:base')
-    androidTestImplementation files('../../../dependencies/libwebrtc/libwebrtc.jar')
+  //  androidTestImplementation files('../../../dependencies/libwebrtc/libwebrtc.jar')
 }
